Lab5/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: flask-service
  namespace: flask-app
  labels:
    app: flask-app
spec:
  type: NodePort
  selector:
    app: flask-app
  ports:
    - name: http
      port: 80
      targetPort: 5000
      nodePort: 30080
